--- a/hi.html
+++ b/hi.html
@@ -1,1 +1,21 @@
-Hello World!
+<html>
+<head>
+
+<link rel = stylesheet type=text/css href=my.css>
+
+</head>
+
+<body>
+
+<h1>Welcome to my pi!</h1>
+
+
+
+
+
+   <h2>I'm name is <span class=me>Benji</span>.</h2>
+<h2 class=me>Ge<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNrF8wGcQP4m-ZT3jTB7qRhrp9IDiR7NzPfQtk4eykFEayCmAS" height="60" width="40">ffrey</h2>
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPvYQkCTPB4QnY2L_K9y9p1C5BehbU7jNFBuWUKz69_49OeiBhYg" height="20" width="40"></img/
+ </body>
+</html>
