--- a/hi.html
+++ b/hi.html
@@ -2,12 +2,12 @@
 <head>
 
 <link rel = stylesheet type=text/css href=my.css>
-
+</head>
 <body bgcolor="#F65F8=">
 
 
 
 
-   <h1>Oedipus <span class=me>Rex</span>.</h1>
+   <h2>Oedipus <span class=me>Rex</span>.</h2>
  </body>
 </html>
